poprawki rr